lab1/Test/L1-A-9-4.cmm
float ;
int UjCNX6DNjIufSHtAhR ( int Vs , int FNi ) {
  if ( r5Riz9JUEKTcuPqzQ3 )   qqOMva_jKuV5 ;

}
struct fgK0qx {
  int FSp4 ;
  struct {
  }u0NzcH , eLSkr1TRxJKp = qvypn6iMs9oV = ix3PF9J0I_j 
    && UGDwmQv != ! u [ _HJ2V7 || L > JoGOHbEasqa7 + QtxFj_L9gz 
    * E4Jf ( NTC445s , Sl1I5rOO >= Raxei4x74ggVc8i7J9S2 
    - ( j <= jGkcO8dbLUiJgdCQ * ( CIQUSxAStiomnPHcqL || 
    && Mr3RGHbI ) == XvgP < ! 1957942846.1626797783 * 
    THS0AGdiVWLfY . eVCweJZGei7SSG ) * ! 1622080506 ) 
    ] / - si77uoBN_KX ( ) . T28N6W7v0TT ;
};
struct l8_S00zNY2uZw rdEmB9pd1wun2lmHS [ ] 
;
int TyGfN2htyJ2bQHtiHz ( ) {
}
int KnUM97Z4aUPkd ( ) {
}
int 
int ;
int 
int ;
int , AKuHO3Vp2g9yYzU 

;
int ;
int YCNvd3RRH ( ) {
  if ( T )   if ( lLeyEW )   while ( gSt )   NtGybfy2 
    ;

else {
  }
else   if ( O_wT682xWa )   if ( gfbW8z5IRXFTJp )   return 
    oHRVcBH ;



}
